# UNLABELED

./: .gitignore  README.md  cfg.py  check_recognition_rate.py  config_models.py  darknet.py  experiment_tracker.py  logger.py  patch_config.py  pyproject.toml  region_loss.py  test_patch_inria.py  train_patch.py  train_patch_inria.py  train_patch_unified.py  utils.py
archive/legacy_config/: patch_config.py
archive/old_modules/: load_data_old.py
archive/old_scripts/: check_recognition_rate.py
archive/training_variants/: train_patch_dog.py  train_patch_inria_cat.py  train_patch_inria_class_up.py
configs/: cat_inria.yaml  dog_unity.yaml  person_bear_multiclass.yaml  person_inria.yaml  unity_person.yaml
evaluation/: README.md  __init__.py  check_recognition_rate.py  detect_camera.py  detect_directory.py  detect_single_image.py  detect_video.py  patch_evaluator.py
evaluation/detectors/: __init__.py  base_detector.py  image_detector.py  video_detector.py
load_data/: __init__.py  dataset.py  losses.py  transforms.py
trainers/: __init__.py  animal_trainers.py  base_trainer.py  inria_trainer.py  multiclass_trainer.py  unity_trainer.py
